--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,21 @@ body{
     margin: 0;
     line-height: 1.5;
     font-size: 16px;
+    font-weight: 400;
 }
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+*:not(i){
+    font-family: "Roboto", sans-serif;
+}
+
+a{
+    text-decoration: none;
 }
 
 :before,::after{
@@ -68,10 +77,9 @@ header,section,footer{
     font-size: 30px;
     color: #ffffff;
     font-weight: bold;
-}
-
-.header .nav{
-   
+    font-family: "Great Vibes" , cursive;
+    letter-spacing: 2px;
+    text-transform: uppercase;
 }
 
 .header .nav ul{
@@ -88,23 +96,38 @@ header,section,footer{
 .header .nav ul li a{
     display:block;
     padding: 25px 0px;
+    color: #ffffff;
+    font-size: 15px;
+    text-transform: uppercase;
+    text-decoration: none;
+    transition: color 0.5s ease;
 }
 
 /* home-section  */
 
 .home-section{
     min-height: 100vh;
-    background-color: gray;
+   position: relative;
 }
 
 .home-section .slide{
-    background-image: url("/img/slides/slide-1.jpg");
     background-position: center;
     background-size: cover;
-    background-repeat: no-repeat;
-    position: relative;
+    position: absolute; 
     z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+     opacity: 0; 
+     visibility: hidden; 
+    transition: all 1s ease-in-out;
 
+}
+
+.home-section .slide.active{
+    opacity: 1;
+    visibility: visible;
 }
 
 .home-section .slide::before{
@@ -115,7 +138,69 @@ header,section,footer{
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.7);
+    z-index: -1;
 }
 .home-section .row{
     min-height: 100vh;
 }
+
+.home-section .home-content{
+    flex: 0 0 100%;
+    max-width: 100%;
+    padding: 0 15px;
+    text-align: center;
+}
+
+.home-section .home-content p{
+    font-size: 24px;
+    color: #ffffff;
+    margin: 0 0 15px;
+}
+
+.home-section .slide.active .home-content p{
+    opacity: 0;
+    animation: fadeInTop 1s ease forwards;
+}
+
+@keyframes fadeInTop{
+    0%{
+        transform: translateY(-50px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+.home-section .home-content h1{
+    font-size: 80px;
+    color: #ffffff;
+    margin: 0;
+    font-weight: normal;
+    font-family:  "Great Vibes" , cursive;
+}
+
+.home-section .slide.active .home-content h1{
+    opacity: 0;
+    animation: fadeInTop 1s ease forwards;
+    animation-delay: 0.5s;
+
+}
+
+.home-section .home-content span{
+    font-size: 20px;
+    display: inline-block;
+    border: 1px solid #ffffff;
+    border-radius: 30px;
+    padding: 7px 30px;
+    margin: 15px 0 0;
+    color: #ffffff;
+}
+
+.home-section .slide.active .home-content span{
+    opacity: 0;
+    animation: fadeInTop 1s ease forwards;
+    animation-delay: 1s;
+    
+}
+
