--- a/css/skins/pink.css
+++ b/css/skins/pink.css
@@ -1,5 +1,17 @@
 /*  pink color style    */
+.couple-section .social-links a i,
+.couple-section .couple .fa-heart,
+.couple-section .couple h3,
 .header .nav ul li a:active,
 .header .nav ul li a:hover{
     color:#fb839e ;
+}
+.couple-section .social-links a i,
+.couple-section .couple img{
+    border-color: #fb839e;
+}
+
+.couple-section .social-links a:hover i{
+    background-color: #fb839e;
+
 }
