--- a/css/skins/pink.css
+++ b/css/skins/pink.css
@@ -1,4 +1,6 @@
 /*  pink color style    */
+.story-section .story-item i,
+.story-section .story-text h3,
 .couple-section .social-links a i,
 .couple-section .couple .fa-heart,
 .couple-section .couple h3,
