--- a/css/style.css
+++ b/css/style.css
@@ -304,3 +304,109 @@ header,section,footer{
 }
 /* end of couple section  */
 
+/* story-section  */
+
+.story-section{
+    padding: 80px 0 80px;
+
+}
+
+.story-section .story-content{
+    flex: 0 0 100%;
+    max-width: 100%;
+    position: relative;
+
+}
+
+.story-section .story-content::before{
+    content: "";
+    position: absolute;
+    left: 50%;
+    width: 1px;
+    height: 100%;
+    top: 0;
+    background-color: #cccccc;
+}
+
+.story-section .story-item i{
+    position: absolute;
+    left: 50%;
+    top: 5px;
+    width: 31px;
+    text-align: center;
+    padding: 5px;
+    margin-top: -15px;
+    font-size: 18px;
+}
+
+.story-section .story-item {
+    display: flex;
+    flex-wrap: wrap;
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 50px;
+    position: relative;
+}
+
+.story-section .story-item:last-child{
+    margin-bottom: 0;
+}
+.story-section .story-item:nth-child(even){
+    flex-direction: row-reverse;
+}
+
+.story-section .story-item:nth-child(odd) .story-text{
+    padding: 0 60px 0 15px;
+    text-align: right;
+}
+
+.story-section .story-item:nth-child(odd) .story-img{
+    padding: 0 15px 0 60px;
+}
+
+.story-section .story-item:nth-child(even) .story-text{
+    padding: 0 15px 0 60px;
+    
+}
+
+.story-section .story-item:nth-child(even) .story-img{
+    padding: 0  60px 0 15px ;
+}
+
+
+
+.story-section .story-text,
+.story-section .story-img{
+    flex: 0 0 50%;
+    max-width: 100%;
+
+}
+
+.story-section .story-text h3{
+    font-size: 24px;
+    margin: 0 0 8px;
+    color: #000000;
+    font-weight: 500;
+}
+
+.story-section .story-text span.date{
+    font-size: 15px;
+    font-weight: 700;
+    color: #555555;
+    margin:0 0 15px  ;
+    display: block;
+}
+
+.story-section .story-content p{
+    font-size: 16px;
+    line-height: 26px;
+    margin: 0;
+    color: #555555;
+}
+
+
+
+
+ 
+/* end of story-section  */
+
