--- a/css/skins/pink.css
+++ b/css/skins/pink.css
@@ -8,6 +8,7 @@
 .header .nav ul li a:hover{
     color:#fb839e ;
 }
+.event-section .event-item-inner::before,
 .couple-section .social-links a i,
 .couple-section .couple img{
     border-color: #fb839e;
