--- a/css/style.css
+++ b/css/style.css
@@ -496,3 +496,98 @@ header,section,footer{
 
 /* end of event section  */
 
+/* people section  */
+.people-section{
+    padding: 80px 0 80px;
+}
+
+.people-section .people-filter{
+    padding: 0 15px;
+    flex: 0 0 100%;
+    max-width: 100%;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.people-section .filter-btn{
+    background-color: #dedede;
+    color: #555555;
+    padding: 7px 15px;
+    margin: 0 3px;
+    font-size: 16px;
+    text-decoration: none;
+    margin-bottom: 10px;
+}
+
+.people-section .filter-btn.active{
+    background-color:#fb839e;
+}
+
+.people-section .people-item{
+    flex: 0 0 25%;
+    max-width: 25%;
+    padding: 15px;
+    margin-top: 25px;
+}
+
+.people-section .people-item-inner{
+    background-color: #ffffff;
+    padding:  15px;
+    text-align: center;
+
+}
+
+.people-section .people-item-inner img{
+    width: 100%;
+    box-shadow: 0 0 10px #cccccc;
+    margin-top: -40px;
+    transition: all 0.5s ease;
+
+}
+
+.people-section .people-item-inner:hover img{
+    transform: scale(0.95);
+}
+
+.people-section .people-item-inner h4{
+    font-size: 16px;
+    color: #000000;
+    font-weight: 500;
+    margin: 20px 0 5px;
+}
+
+.people-section .people-item-inner p{
+    color: #555555;
+    font-size: 16px;
+    margin: 0 0 10px;
+}
+
+.people-section .people-item-inner .social-links{
+    text-align: center;
+    padding: 10px 0;
+}
+
+.people-section .people-item-inner .social-links a{
+    display: inline-block;
+    margin: 0 3px;
+    text-decoration: none;
+}
+
+.people-section .people-item-inner .social-links a i {
+    height: 32px;
+    width: 32px;
+    border: 1px solid transparent;
+    display: block;
+    text-align: center;
+    line-height: 32px;
+    border-radius: 50%;
+    transition: all 0.5s ease;
+    background-color: #ffffff;
+}
+
+.people-section .people-item-inner .social-links a:hover i{
+    color: #ffffff;
+
+}
+/* end people section  */
+
