--- a/css/skins/pink.css
+++ b/css/skins/pink.css
@@ -1,4 +1,5 @@
 /*  pink color style    */
+.btn-1:hover,
 .people-section .people-item-inner .social-links a i,
 .event-section .event-item-inner span,
 .story-section .story-item i,
@@ -10,12 +11,16 @@
 .header .nav ul li a:hover{
     color:#fb839e ;
 }
+
+.btn-1,
 .people-section .people-item-inner .social-links a i,
 .event-section .event-item-inner::before,
 .couple-section .social-links a i,
 .couple-section .couple img{
     border-color: #fb839e;
 }
+.btn-1,
+.rsvp-section,
 .people-section .people-item-inner .social-links a:hover i,
 .people-section .filter-btn .active,
 .event-section,
