--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@ header,section,footer{
 
 .header.fixed{
     background-color:#ffffff ;
+    box-shadow: 0 0 8px #cccccc;
 }
 
 .header .logo {
@@ -136,6 +137,59 @@ header,section,footer{
     color: #000000;
 }
 
+.header .hamburger-btn{
+    display: inline-block;
+    height: 34px;
+    width: 40px;
+    border-radius: 3px;
+    cursor: pointer;
+    border: 1px solid #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s ease;
+    display: none;
+}
+
+.header.fixed .hamburger-btn{
+    border-color: #000000;
+    background-color: #000000;
+}
+
+.header .hamburger-btn span{
+    display: block;
+    height: 1px;
+    width: 16px;
+    background-color: #ffffff;
+    position: relative;
+    transition: all 0.5s ease;
+
+}
+
+
+.header .hamburger-btn span::before,
+.header .hamburger-btn span::after{
+    content: '';
+    position: absolute;
+    height: 1px;
+    width: 100%;
+    left: 0;
+    background-color: #ffffff;
+     
+}
+
+.header .hamburger-btn span::before{
+   top:-6px; 
+}
+
+.header .hamburger-btn span::after{
+    top:6px; 
+ }
+
+.header .nav{
+    padding: 0 15px;
+}
+
 .header .nav ul{
     list-style: none;
     margin: 0;
@@ -155,6 +209,11 @@ header,section,footer{
     text-transform: uppercase;
     text-decoration: none;
     transition: color 0.5s ease;
+}
+
+.header.fixed .nav ul li a{
+    color: #555555;
+
 }
 
 /* home-section  */
@@ -416,6 +475,10 @@ header,section,footer{
 
 }
 
+.story-section .story-img img{
+    width: 100%;
+}
+
 .story-section .story-text h3{
     font-size: 24px;
     margin: 0 0 8px;
@@ -453,7 +516,7 @@ header,section,footer{
 .event-section .event-item{
     flex: 0 0 33.33%;
     max-width: 33.33%;
-    padding: 0 15px;
+    padding: 15px;
     display: flex;
     flex-wrap: wrap;
     
@@ -769,6 +832,7 @@ header,section,footer{
 .rsvp-section .rsvp-form{
     flex: 0 0 100%;
     max-width: 100%;
+    padding: 0 15px;
 }
 
 .rsvp-section .form{
@@ -836,6 +900,7 @@ header,section,footer{
     justify-content: center;
     position: relative;
     z-index: 1;
+    overflow: hidden;
 }
 
 .footer .footer-content .couple-name img{
