--- a/css/skins/light-blue.css
+++ b/css/skins/light-blue.css
@@ -1,4 +1,4 @@
-/*  pink color style    */
+/*  light-green color style    */
 .preloader .loader i,
 .btn-1:hover,
 .people-section .people-item-inner .social-links a i,
@@ -12,7 +12,7 @@ body.dark .header .nav ul li a.active,
 .header .nav ul li a.active,
 body.dark .header .nav ul li a:hover,
 .header .nav ul li a:hover{
-    color:#fb839e ;
+    color:#3e99f4 ;
 }
  
 .btn-1,
@@ -20,10 +20,10 @@ body.dark .header .nav ul li a:hover,
 .event-section .event-item-inner::before,
 .couple-section .social-links a i,
 .couple-section .couple img{
-    border-color: #fb839e;
+    border-color: #3e99f4;
 }
 .preloader .loader::before{
-    border-right-color:  #fb839e ;
+    border-right-color:  #3e99f4 ;
 }
 .setting .s-toggle-btn,
 .btn-1,
@@ -33,7 +33,11 @@ body.dark .people-section .filter-btn.active,
 .people-section .filter-btn.active,
 .event-section,
 .couple-section .social-links a:hover i{
-    background-color: #fb839e;
+    background-color: #3e99f4;
 
 }
- 
+
+.event-section .event-item-inner img,
+.footer .footer-content .couple-name img{
+    filter: hue-rotate(220deg);
+}
