--- a/css/skins/pink.css
+++ b/css/skins/pink.css
@@ -1,4 +1,5 @@
 /*  pink color style    */
+.fa-music,
 .preloader .loader i,
 .btn-1:hover,
 .people-section .people-item-inner .social-links a i,
@@ -14,7 +15,7 @@ body.dark .header .nav ul li a:hover,
 .header .nav ul li a:hover{
     color:#fb839e ;
 }
- 
+.fa-music,
 .btn-1,
 .people-section .people-item-inner .social-links a i,
 .event-section .event-item-inner::before,
@@ -25,6 +26,7 @@ body.dark .header .nav ul li a:hover,
 .preloader .loader::before{
     border-right-color:  #fb839e ;
 }
+.fa-music.pause::after,
 .setting .s-toggle-btn,
 .btn-1,
 .rsvp-section,
